--- a/index.html
+++ b/index.html
@@ -13,6 +13,20 @@
         width: 100vw;
         height: 100vh;
       }
+      .flex-container{
+        /* width: 100%; */
+        height: 100%;
+        display: flex;
+        align-items: normal;
+        flex-wrap: wrap;
+        flex-direction: column-reverse;
+      }
+      .leaflet-popup-content {
+        min-width: 1000px;
+        max-width: 1000px;
+        max-height: 600px;
+        overflow-y: scroll;
+      }
     </style>
   </head>
   <body>
@@ -21,6 +35,8 @@
     <!-- <button id="refreshButton">Refresh Button</button> -->
     <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js" integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew==" crossorigin=""></script>
     <script type="module" src="./maps.js"></script>
+    <script src="https://unpkg.com/leaflet-responsive-popup@1.0.0/leaflet.responsive.popup.js"></script>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet-responsive-popup@1.0.0/leaflet.responsive.popup.css" />
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/leaflet-easybutton@2/src/easy-button.css">
     <script src="https://cdn.jsdelivr.net/npm/leaflet-easybutton@2/src/easy-button.js"></script>
