--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
         height: 100vh;
       }
       .flex-container{
-        /* width: 100%; */
         height: 100%;
         display: flex;
         align-items: normal;
         flex-wrap: wrap;
         flex-direction: column-reverse;
+        justify-content: space-between;
+        pad: 10px 10px; 
       }
       .leaflet-popup-content {
         min-width: 1000px;
